--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -124,6 +124,7 @@ Resources:
               - logs:UpdateLogDelivery
               - logs:PutSubscriptionFilter
               - logs:PutRetentionPolicy
+              - xray:*
             Resource: '*'
 Outputs:
   FociTableName:
