--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "@types/uuid": "^3.4.5",
     "ajv": "^6.10.2",
     "aws-sdk": "^2.543.0",
+    "aws-xray-sdk": "^2.3.6",
     "jest": "^24.9.0",
     "jest-date-mock": "^1.0.7",
     "rimraf": "^3.0.0",
