--- a/api/sam.yaml
+++ b/api/sam.yaml
@@ -42,6 +42,24 @@ Resources:
             Path: /v1/teams
             Method: POST
 
+  CreateTournament:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/create-tournament
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref FociApi
+            Path: /v1/tournaments
+            Method: POST            
+
 Outputs:
   FociApi:
     Description: "Foci 2020 API"
