--- a/api/sam.yaml
+++ b/api/sam.yaml
@@ -58,7 +58,25 @@ Resources:
           Properties:
             RestApiId: !Ref FociApi
             Path: /v1/tournaments
-            Method: POST            
+            Method: POST    
+
+  CreateMatch:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/create-match
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref FociApi
+            Path: /v1/matches
+            Method: POST                        
 
 Outputs:
   FociApi:
