--- a/api/sam.yaml
+++ b/api/sam.yaml
@@ -76,7 +76,25 @@ Resources:
           Properties:
             RestApiId: !Ref FociApi
             Path: /v1/matches
-            Method: POST                        
+            Method: POST   
+
+  ListMatches:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/list-matches
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref FociApi
+            Path: /v1/matches
+            Method: GET                                    
 
 Outputs:
   FociApi:
