--- a/api/sam.yaml
+++ b/api/sam.yaml
@@ -6,6 +6,8 @@ Parameters:
     Type: String
   FociTableName:
     Type: String
+  FociTableStreamArn:
+    Type: String
 
 Globals:
   Api:
@@ -60,6 +62,24 @@ Resources:
             Path: /v1/tournaments
             Method: POST    
 
+  UpdateTournament:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/update-tournament
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref FociApi
+            Path: /v1/tournaments/{tournamentId}
+            Method: PATCH    
+
   CreateMatch:
     Type: AWS::Serverless::Function
     Properties:
@@ -77,6 +97,23 @@ Resources:
             RestApiId: !Ref FociApi
             Path: /v1/matches
             Method: POST   
+
+  UpdateMatchWithTournament:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/update-match-with-tournament
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        DB:
+          Type: DynamoDB
+          Properties:
+            Stream: !Ref FociTableStreamArn
+            StartingPosition: TRIM_HORIZON
 
   ListMatches:
     Type: AWS::Serverless::Function
