--- a/cloudformation.yaml
+++ b/cloudformation.yaml
@@ -13,3 +13,4 @@ Resources:
       Parameters:
         FociLambdaRoleArn: !GetAtt Infrastructure.Outputs.FociLambdaRoleArn
         FociTableName: !GetAtt Infrastructure.Outputs.FociTableName
+        FociTableStreamArn: !GetAtt Infrastructure.Outputs.FociTableStreamArn
