--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -10,9 +10,9 @@ Resources:
         StreamViewType: NEW_IMAGE 
       BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
-        - AttributeName: partitionKey
+        - AttributeName: documentType-id
           AttributeType: S
-        - AttributeName: sortKey
+        - AttributeName: segment
           AttributeType: S
         - AttributeName: documentType
           AttributeType: S
@@ -24,10 +24,12 @@ Resources:
           AttributeType: S
         - AttributeName: userId
           AttributeType: S
+        - AttributeName: orderingValue
+          AttributeType: S
       KeySchema:
-        - AttributeName: partitionKey
+        - AttributeName: documentType-id
           KeyType: HASH
-        - AttributeName: sortKey
+        - AttributeName: segment
           KeyType: RANGE
       GlobalSecondaryIndexes:
         - IndexName: indexByTournamentId
@@ -37,7 +39,7 @@ Resources:
             - AttributeName: documentType
               KeyType: RANGE
           Projection:
-            ProjectionType: ALL
+            ProjectionType: KEYS_ONLY
         - IndexName: indexByTeamId
           KeySchema:
             - AttributeName: teamId
@@ -45,7 +47,7 @@ Resources:
             - AttributeName: documentType
               KeyType: RANGE
           Projection:
-            ProjectionType: ALL
+            ProjectionType: KEYS_ONLY
         - IndexName: indexByMatchId
           KeySchema:
             - AttributeName: matchId
@@ -53,7 +55,7 @@ Resources:
             - AttributeName: documentType
               KeyType: RANGE
           Projection:
-            ProjectionType: ALL
+            ProjectionType: KEYS_ONLY
         - IndexName: indexByUserId
           KeySchema:
             - AttributeName: userId
@@ -61,11 +63,13 @@ Resources:
             - AttributeName: documentType
               KeyType: RANGE
           Projection:
-            ProjectionType: ALL
+            ProjectionType: KEYS_ONLY
         - IndexName: indexByDocumentType
           KeySchema:
             - AttributeName: documentType
               KeyType: HASH
+            - AttributeName: orderingValue
+              KeyType: RANGE
           Projection:
             ProjectionType: ALL                  
 
