--- a/api/sam.yaml
+++ b/api/sam.yaml
@@ -78,7 +78,7 @@ Resources:
           Properties:
             RestApiId: !Ref FociApi
             Path: /v1/tournaments/{tournamentId}
-            Method: PATCH    
+            Method: PUT    
 
   UpdateTeam:
     Type: AWS::Serverless::Function
@@ -96,7 +96,25 @@ Resources:
           Properties:
             RestApiId: !Ref FociApi
             Path: /v1/teams/{teamId}
-            Method: PATCH    
+            Method: PUT    
+
+  UpdateMatch:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/update-match
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref FociApi
+            Path: /v1/matches/{matchId}
+            Method: PUT    
 
   CreateMatch:
     Type: AWS::Serverless::Function
