--- a/api/sam.yaml
+++ b/api/sam.yaml
@@ -204,6 +204,24 @@ Resources:
             Path: /v1/teams
             Method: GET                                    
 
+  ListTournaments:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/list-tournaments
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref FociApi
+            Path: /v1/tournaments
+            Method: GET    
+
 Outputs:
   FociApi:
     Description: "Foci 2020 API"
