--- a/api/sam.yaml
+++ b/api/sam.yaml
@@ -240,6 +240,23 @@ Resources:
             Path: /v1/teams/{teamId}
             Method: GET  
 
+  GetTournament:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/get-tournament
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref FociApi
+            Path: /v1/tournaments/{tournamentId}
+            Method: GET  
 Outputs:
   FociApi:
     Description: "Foci 2020 API"
