--- a/api/sam.yaml
+++ b/api/sam.yaml
@@ -292,7 +292,25 @@ Resources:
           Properties:
             RestApiId: !Ref FociApi
             Path: /v1/matches/{matchId}
-            Method: DELETE              
+            Method: DELETE  
+
+  DeleteTeam:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/delete-team
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref FociApi
+            Path: /v1/teams/{teamId}
+            Method: DELETE                          
 Outputs:
   FociApi:
     Description: "Foci 2020 API"
