--- a/api/sam.yaml
+++ b/api/sam.yaml
@@ -311,6 +311,24 @@ Resources:
             RestApiId: !Ref FociApi
             Path: /v1/teams/{teamId}
             Method: DELETE                          
+
+  DeleteTournament:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: ./dist/delete-tournament
+      Handler: index.default
+      Runtime: nodejs10.x
+      Role: !Ref FociLambdaRoleArn
+      Timeout: 10
+      MemorySize: 512
+      Tracing: Active
+      Events:
+        API:
+          Type: Api
+          Properties:
+            RestApiId: !Ref FociApi
+            Path: /v1/tournaments/{tournamentId}
+            Method: DELETE          
 Outputs:
   FociApi:
     Description: "Foci 2020 API"
