--- a/infrastructure/cloudformation.yaml
+++ b/infrastructure/cloudformation.yaml
@@ -7,7 +7,7 @@ Resources:
     UpdateReplacePolicy: Delete
     Properties:
       StreamSpecification:
-        StreamViewType: NEW_IMAGE 
+        StreamViewType: NEW_AND_OLD_IMAGES 
       BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
         - AttributeName: documentType-id
@@ -39,7 +39,9 @@ Resources:
             - AttributeName: documentType
               KeyType: RANGE
           Projection:
-            ProjectionType: KEYS_ONLY
+            ProjectionType: INCLUDE
+            NonKeyAttributes:
+              - matchId
         - IndexName: indexByTeamId
           KeySchema:
             - AttributeName: teamId
@@ -47,7 +49,9 @@ Resources:
             - AttributeName: documentType
               KeyType: RANGE
           Projection:
-            ProjectionType: KEYS_ONLY
+            ProjectionType: INCLUDE
+            NonKeyAttributes:
+              - matchId
         - IndexName: indexByMatchId
           KeySchema:
             - AttributeName: matchId
