Replace Dynamo stream with SNS

--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
     "clean": "rimraf ./dist",
     "build": "npm run clean && webpack",
     "test": "jest --coverage --runInBand",
-    "test:dev": "jest --watch --runInBand",
+    "test:dev": "jest --watch --runInBand --silent",
     "lint": "tslint --project tsconfig.json",
     "lintfix": "tslint --project tsconfig.json --fix"
   },
