--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -9,6 +9,7 @@
       "sourceMap": false,
       "moduleResolution": "node",
       "resolveJsonModule": true,
+      "noUnusedLocals": true,
       "outDir": "output",
       "rootDir": "../",
       "baseUrl": ".",
